Add an integration test for backing up photos to Drive.

In order to make the test pass:
- Change chrome.fileManagerPrivate.setEntryTag() to succeed but take no
  other action with DriveFS enabled; it won't be supported with DriveFS.
- Enable a mock SyncFileSystemService so the use of the syncFileSystem
  API can succeed locally.
- Add support for mounting a USB drive containing a DCIM directory with
  an image.

This test only exercises basic functionality:
- There is no previous photo backup history in the syncFileSystem.
- Images in the external drive are not duplicated in Drive.

Bug: 883628
Change-Id: Ic5244de54bdd6f3fee0c82a356e7e530b85dba64
Reviewed-on: https://chromium-review.googlesource.com/1230193
Reviewed-by: Noel Gordon <noel@chromium.org>
Commit-Queue: Sam McNally <sammc@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592313}
Former-commit-id: 57ce6a168d6915d5fa5068a0682bb663830eca70